<resources>
    <string name="app_name">practice_4.1</string>
    <string name="enter_name">Enter name:</string>
    <string name="enter_surname">Enter surname:</string>
    <string name="next">Next</string>
    <string name="next_data">Next</string>
    <string name="missing_name">Missing Name</string>
    <string name="missing_surname">Missing Surname</string>
    <string name="name">Name</string>
    <string name="day">Enter day:</string>
    <string name="time">Enter time:</string>
    <string name="commentary">Enter commentary:</string>
    <string name="save">Save</string>
</resources>