<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityInput">

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/day"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="320dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/commentary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/save"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

</androidx.constraintlayout.widget.ConstraintLayout>